# FouthLab

./: CMakeLists.txt  main.cpp
MainAbstractClass/: MainAbstractClass.cpp  MainAbstractClass.h
MainAbstractClass/Prism/: Prism.cpp  Prism.h
MainAbstractClass/Tetrahedron/: Tetrahedron.cpp  Tetrahedron.h
MainAbstractClass/Tetrahedron/TruncatedTetrahedron/: TruncatedTetrahedron.cpp  TruncatedTetrahedron.h
